corrected few specs for ios/device.rb

--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 bundle_id: safarilauncher
 #Relative to device_api-ios dir - Provisioned to the device , app is to be installed
 app_path: lib/resources/SafariLauncher.app
-
+app_name: SafariLauncher
 
 ## ios simulator 
 
